SECURITY FIX: Enforce MANAGE_REQUESTS (16) as ONLY approval permission
CRITICAL ISSUE FIXED:
Previously, the approval system incorrectly allowed users with ANY management
permission (including MANAGE_ISSUES: 1048576) to potentially approve requests.
This violated the principle that only MANAGE_REQUESTS (16) should grant
approval rights.

WHAT WAS BROKEN:
- Permission system conflated different management roles
- Badge system showed 'manager' for both request approvers and issue managers
- No clear distinction between approval capabilities vs other management

FIXES APPLIED:

1. Backend (lib/permissions.js):
   - canApproveRequests() now explicitly checks ONLY ADMIN (2) OR MANAGE_REQUESTS (16)
   - Removed implicit 'or any management permission' logic
   - Added detailed comments explaining the restriction

2. Permission Classification:
   - Split 'manager' type into 'request-manager' and 'manager'
   - 'request-manager': Has MANAGE_REQUESTS (16) - CAN approve requests
   - 'manager': Has other management perms - CANNOT approve requests
   - Clear visual distinction in web dashboard

3. Web Dashboard (web/script.js):
   - Added 'request-manager' badge with distinct purple color
   - Users with MANAGE_ISSUES now show as 'Manager' (no approval implied)
   - Users with MANAGE_REQUESTS show as 'Request Manager' (approval capable)

4. Localization:
   - Added 'request_manager' translation key

SECURITY GUARANTEE:
- All layers (backend, bot UI, web dashboard) now aligned
- Only ADMIN (2) or MANAGE_REQUESTS (16) can approve requests
- MANAGE_ISSUES (1048576) and other permissions CANNOT approve
- Permission checks are explicit bitmask operations, not role-based
- System is deterministic and auditable

VERIFICATION:
✅ MANAGE_REQUESTS (16) → canApproveRequests: true, type: 'request-manager'
✅ MANAGE_ISSUES (1048576) → canApproveRequests: false, type: 'manager'
✅ ADMIN (2) → canApproveRequests: true, type: 'admin'

This prevents privilege escalation and ensures request approva

--- a/locales/en.json
+++ b/locales/en.json
@@ -211,6 +211,7 @@
     "checking": "Checking...",
     "admin": "Admin",
     "manager": "Manager", 
+    "request_manager": "Request Manager",
     "auto_approve": "Auto-Approve",
     "user": "User",
     "error": "Error",
